# MusicHouse

./: .gitignore  README.md  main.py  pyproject.toml  todo.md
src/musichouse/: ai_client.py  cache.py  config.py  error_handling.py  leaderboard.py  leaderboard_cache.py  log_setup.py  main.py  parser.py  scanner.py  tag_writer.py  threading.py  utils.py
src/musichouse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/musichouse/ui/: __init__.py  ai_tab.py  ai_worker.py  fixer_tab.py  leaderboard_tab.py  main_window.py  settings_dialog.py  tag_fix_worker.py
src/musichouse/utils/: __init__.py  lock.py
tests/: conftest.py  test_ai_client.py  test_config.py  test_integration.py  test_leaderboard.py  test_leaderboard_cache.py  test_parser.py  test_progress_bar.py  test_real_scan_integration.py  test_scanner.py  test_tag_writer.py  test_threading.py  test_types.py  test_ui_automation.py  test_utils.py
tests/ui/: test_ai_tab.py  test_fixer_tab.py  test_leaderboard_tab.py  test_main_window.py
